# mkrs

./: .gitignore  Cargo.toml  README.md
src/: acct.rs  api.rs  lib.rs  nyaize.rs
src/api/: client.rs
src/api/endpoints/: account_api.rs  admin_api.rs  antennas_api.rs  app_api.rs  auth_api.rs  channels_api.rs  charts_api.rs  clip_api.rs  clips_api.rs  configuration.rs  default_api.rs  drive_api.rs  federation_api.rs  flash_api.rs  flashs_api.rs  following_api.rs  gallery_api.rs  hashtags_api.rs  lists_api.rs  meta_api.rs  mod.rs  non_productive_api.rs  notes_api.rs  notifications_api.rs  pages_api.rs  reactions_api.rs  reset_password_api.rs  role_api.rs  users_api.rs  webhooks_api.rs
src/api/models/: abuse_report_notification_recipient.rs  ad.rs  admin___abuse_report___notification_recipient___create_request.rs  admin___abuse_report___notification_recipient___list_request.rs  admin___abuse_report___notification_recipient___show_request.rs  admin___abuse_report___notification_recipient___update_request.rs  admin___abuse_user_reports_200_response_inner.rs  admin___abuse_user_reports_request.rs  admin___accounts___create_200_response.rs  admin___accounts___create_request.rs  admin___accounts___delete_request.rs  admin___accounts___find_by_email_request.rs  admin___ad___create_request.rs  admin___ad___list_request.rs  admin___ad___update_request.rs  admin___announcements___create_200_response.rs  admin___announcements___create_request.rs  admin___announcements___list_200_response_inner.rs  admin___announcements___list_request.rs  admin___announcements___update_request.rs  (+406 more)
