[package]
name = "mkrs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
fancy-regex = "0.14.0"
log = "0.4.22"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
ulid = "1.1.3"
