[package]
name = "mkrs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
fancy-regex = "0.14.0"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
serde_repr = "0.1.19"
serde_with = { version = "3.11.0", features = ["base64", "std", "macros"] }
tokio = { version = "1.42.0", features = ["full"] }
ulid = "1.1.3"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
